Fixed spacing issue with FlexBox

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,63 +6,76 @@ body {
 
 $backgroundColor: rgba(0, 0, 0, 0.3);
 
-.navbar {
+.nav{
 	background-color: $backgroundColor;
 	padding: 0;
 	margin: 0;
-}
 
-// Mobile
-@media screen and (min-width: 320px) and (max-width: 768px) {
+	li.item {
+		list-style-type: none;
+	}
 
-	.navbar {
-		width: 300px;
-		height: 100%;
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 0;
-
-		li.item {
-			display: block;
-			list-style-type: none;
-
-			a {
-				color: #ffffff;
-				display: block;
-				padding: 12px 20px;
-				text-decoration: none;
-
-				&:hover, &.active {
-					background-color: $backgroundColor * 0.6;
-				}
-
-			}
-
-		}
+	a {
+		text-decoration: none;
+		color: #ffffff;
+		padding: 12px 20px;
 	}
 
 }
 
-// Desktop
-@media screen and (min-width: 768px) {
+.topNav {
+	@extend .nav;
+	border-bottom: 1px solid rgba(#FFFFFF, 0.1);
+	display: flex;
 
 	li.item {
+		border-right: 1px solid rgba(#FFFFFF, 0.1);
 		display: inline-block;
-		list-style-type: none;
 
 		a {
-			color: #ffffff;
 			display: inline-block;
-			padding: 12px 20px;
-			text-decoration: none;
+
+			img {
+				max-width: 18px;
+				margin: 3px 7px 6px 0;
+				vertical-align: middle;
+			}
+
+			&.logo {
+				font-weight: 500;
+				.fa{
+					margin-right: 6px;
+				}
+			}
 
 			&:hover, &.active {
 				background-color: $backgroundColor * 0.6;
 			}
 
 		}
-
 	}
+}
 
+.leftNav {
+	@extend .nav;
+	border-right: 1px solid rgba(#FFFFFF, 0.1);
+	height: 100%;
+	margin-top: 44px;
+	width: 300px;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+
+	li.item {
+		display: block;
+
+		a {
+			display: block;
+
+			&:hover, &.active {
+				background-color: $backgroundColor * 0.6;
+			}
+		}
+	}
 }
